# advent-of-code

./: .gitignore  .nvim.lua  README.md  go.mod  pyproject.toml  requirements.txt
2023/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py
2024/: q01.py  q02.py  q04.py  q05.py
go/2024/day1/: q01.go
go/utils/: utils.go
python/: utils.py
python/2023/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py
python/2024/: q03.py  q06.py  q07.py  q08.py
