[project]
name="advent-of-code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "browser-cookie3>=0.19.1",
    "ipdb>=0.13.13",
    "mypy>=1.13.0",
    "numpy>=2.1.3",
    "parse>=1.20.2",
    "pre-commit>=4.0.1",
    "pyparsing>=3.2.0",
    "pytest>=8.3.3",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "python-lsp-ruff>=2.2.0",
    "python-lsp-server>=1.10.0",
    "pynvim>=0.5.0",
    "ruff>=0.8.0",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = [
    "2023",
    "2024"
]

[tool.ruff]
target-version = "py313"
line-length = 99
extend-exclude = [
    ".DS_Store",
    ".pytest_cache",
    "__pycache__",
]

[tool.ruff.lint]
ignore = [
    "E701"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # `foo` imported but unused
]

[tool.ruff.lint.isort]
known-third-party = [
    "aocd",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

